aggiunta notification, testato un solo caso tramite swagger/ui
